deployment/dok8s/notary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notary
  labels:
    app: notary
    component: notary
    part-of: cryptosoccer
    version: "0.0.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notary
  template:
    metadata:
      labels:
        app: notary
        component: notary
        part-of: cryptosoccer
        version: "0.0.1"
    spec:
      containers:
      - name: notary
        image: freeverseio/market.notary:dev
        imagePullPolicy: Always
        args: [-postgres, "postgres://$(freeverse_username):$(freeverse_password)@marketdb:5432/market?sslmode=disable",
               -ethereum, http://xdai:8545,
               -private_key, "3B878F7892FBBFA30C8AED1DF317C19B853685E707C2CF0EE1927DC516060A54",
               -market_address, "$(MARKET_CONTRACT_ADDRESS)"]

      imagePullSecrets:
      - name: docker-secret
