deployment/dok8s/authproxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: authproxy
  labels:
    app: authproxy
    component: authproxy
    part-of: cryptosoccer
    version: "0.0.1"
spec:
  ports:
  - port: 8080
  selector:
    app: authproxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authproxy
  labels:
    app: authproxy
    component: authproxy
    part-of: cryptosoccer
    version: "0.0.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authproxy
  template:
    metadata:
      labels:
        app: authproxy
        component: authproxy
        part-of: cryptosoccer
        version: "0.0.1"
    spec:
      containers:
      - name: authproxy
        image: freeverseio/authproxy:dev
        imagePullPolicy: Always
        args: [-debug, -backdoor=true,
               -gqlurl, "http://horizon:4000"]

      imagePullSecrets:
      - name: docker-secret
