deployment/dok8s/horizon.yaml
apiVersion: v1
kind: Service
metadata:
  name: horizon
  labels:
    app: horizon
    component: horizon
    part-of: cryptosoccer
    version: "0.0.1"
spec:
  ports:
  - port: 4000
  selector:
    app: horizon
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: horizon
  labels:
    app: horizon
    component: horizon
    part-of: cryptosoccer
    version: "0.0.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: horizon
  template:
    metadata:
      labels:
        app: horizon
        component: horizon
        part-of: cryptosoccer
        version: "0.0.1"
    spec:
      containers:
      - name: horizon
        image: freeverseio/horizon:dev
        imagePullPolicy: Always
        args: [-u, "http://universeapi:4000/graphql",
               -m, "http://trader:4000/graphql"]

      imagePullSecrets:
      - name: docker-secret
