deployment/dok8s/marketdb.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketdb
  labels:
    app: marketdb
    component: database
    part-of: cryptosoccer
    version: "0.0.1"
spec:
  ports:
   - port: 5432
  selector:
   app: marketdb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketdb
  labels:
    app: marketdb
    component: database
    part-of: cryptosoccer
    version: "0.0.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: marketdb
  template:
    metadata:
      labels:
        app: marketdb
        component: database
        part-of: cryptosoccer
        version: "0.0.1"
    spec:
      containers:
      - name: marketdb
        image: freeverseio/market.db:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 5432
        #volumeMounts:
        #- mountPath: "/var/lib/postgresql/data"
        #  name: marketdb-storage
      imagePullSecrets:
      - name: docker-secret
      #volumes:
      #- name: marketdb-storage
      #  persistentVolumeClaim:
      #    claimName: marketdb-pvclaim
