deployment/dok8s/relayactions.yaml
apiVersion: v1
kind: Service
metadata:
  name: relayactions
  labels:
    app: relayactions
    component: relayactions
    part-of: cryptosoccer
    version: "0.0.1"
spec:
  #type: NodePort
  ports:
  - port: 4004
  selector:
    app: relayactions
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: relayactions
  labels:
    app: relayactions
    component: relayactions
    part-of: cryptosoccer
    version: "0.0.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: relayactions
  template:
    metadata:
      labels:
        app: relayactions
        component: relayactions
        part-of: cryptosoccer
        version: "0.0.1"
    spec:
      containers:
      - name: relayactions
        image: freeverseio/relay.actions:dev
        imagePullPolicy: Always
        args: [-postgres, "postgres://$(freeverse_username):$(freeverse_password)@universedb:5432/cryptosoccer?sslmode=disable",
               -ethereum, http://xdai:8545,
               -private_key, "3b650bb692288ea5d4c99c2d3e1eb77972eaeebdb04f6b2610a7d7f42de0ad27",
               -updatesContractAddress, "$(UPDATES_CONTRACT_ADDRESS)",
               -ipfs, ipfsnode:5001]

      imagePullSecrets:
      - name: docker-secret
