deployment/dok8s/trader.yaml
apiVersion: v1
kind: Service
metadata:
  name: trader
  labels:
    app: trader
    component: trader
    part-of: cryptosoccer
    version: "0.0.1"
spec:
  ports:
  - port: 4000
  selector:
    app: trader
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trader
  labels:
    app: trader
    component: trader
    part-of: cryptosoccer
    version: "0.0.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trader
  template:
    metadata:
      labels:
        app: trader
        component: trader
        part-of: cryptosoccer
        version: "0.0.1"
    spec:
      containers:
      - name: trader
        image: freeverseio/market.trader:dev
        imagePullPolicy: Always
        args: [-d, "postgres://$(freeverse_username):$(freeverse_password)@marketdb:5432/market",
               -p, "4000"]
      imagePullSecrets:
      - name: docker-secret
