deployment/dok8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cryptosoccer-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: k8s-5f63bbd4f5b1.busyverse.com
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes-first
          servicePort: 80
      - path: /eth
        backend:
          serviceName: ethereum
          servicePort: 8545
      - path: /horizon(/|$)(.*)
        backend:
          serviceName: horizon
          servicePort: 4000
      #- path: /universe(/|$)(.*)
      #  backend:
      #    serviceName: universeapi
      #    servicePort: 4000
      #- path: /trader(/|$)(.*)
      #  backend:
      #    serviceName: trader
      #    servicePort: 4000
